--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,11 @@
     "description": "A base server library for chbook4.",
     "license": "MIT",
     "require": {
-        "php": ">=7.2"
+        "php": ">=7.2",
+        "hyperf/json-rpc": "~2.2.0",
+        "hyperf/rpc-client": "~2.2.0",
+        "hyperf/service-governance-nacos": "v2.2.31.1",
+        "hyperf/service-governance": "~2.2.0"
     },
     "authors": [
         {
