--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,14 @@
     "description": "A base server library for chbook4.",
     "license": "MIT",
     "require": {
-        "php": ">=8.0",
-        "hyperf/json-rpc": "~3.0.0",
-        "hyperf/rpc-client": "~3.0.0",
-        "hyperf/config-center": "~3.0.0",
-        "hyperf/config-nacos": "~3.0.0",
-        "hyperf/service-governance-nacos": "~3.0.0",
-        "hyperf/service-governance": "~3.0.0",
-        "hyperf/rpc-multiplex": "~3.0.0"
+        "php": ">=7.2",
+        "hyperf/json-rpc": "~2.2.0",
+        "hyperf/rpc-client": "~2.2.0",
+        "hyperf/config-center": "^2.2",
+        "hyperf/config-nacos": "^2.2",
+        "hyperf/service-governance-nacos": "v2.2.31.1",
+        "hyperf/service-governance": "~2.2.0",
+        "hyperf/rpc-multiplex": "^2.2"
     },
     "authors": [
         {
