--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "hyperf/rpc-client": "~3.1.0",
         "hyperf/config-center": "^3.1",
         "hyperf/config-nacos": "^3.1",
-        "hyperf/service-governance-nacos": "v2.2.31.1",
+        "hyperf/service-governance-nacos": "~3.1.0",
         "hyperf/service-governance": "~3.1.0",
         "hyperf/rpc-multiplex": "^3.1"
     },
